Corrected adaptive layout

--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,11 @@
                 <div class="logo">
                     <img src="../src/img/favicon.svg" alt="logo">
                 </div>
-                <a href="https://git.io/typing-svg"><img
-                        src="https://readme-typing-svg.herokuapp.com?font=Lobster&size=24&pause=3001&color=8F7EAF&center=true&vCenter=true&random=false&width=200&lines=Nice+to+meet+you!+"
-                        alt="Typing SVG" /></a>
+                <div class="box">
+                    <a href="https://git.io/typing-svg"><img
+                            src="https://readme-typing-svg.herokuapp.com?font=Lobster&size=24&pause=3001&color=8F7EAF&center=true&vCenter=true&random=false&width=200&lines=Nice+to+meet+you!+"
+                            alt="Typing SVG" /></a>
+                </div>
             </div>
 
             <button type="button" class="nav-btn"> my contacts</button>
@@ -166,10 +168,11 @@
             <main class="main">
                 <!-- about me main info -->
                 <section class="section container">
-                    <h1 class="name">nataliia cherkashyna</h1>
+                    <h1 class="name"><span class='first-name'>nataliia</span> cherkashyna</h1>
                     <h2 class="profession">full stack javaScript developer</h2>
                     <h3 class="section-title">summary</h3>
-                    <p class="text-L">I am a confident Front-End developer with knowledge of HTML/CSS, JavaScript,
+                    <p class="text-L">I am a confident full-stack javascript web developer with knowledge of HTML/CSS,
+                        JavaScript,
                         TypeScript, React/Redux, Next.JS, NodeJS, Nest.JS. I have a proven track record of using
                         Agile/Scrum methodology to deliver projects on time, work as a team and focus on
                         user-friendliness. I quickly adapt to dynamics of the environment and constructively solve
